<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>dk.alexandra.fresco</groupId>
  <artifactId>fresco-ml</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <dependencies>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-csv</artifactId>
      <version>1.5</version>
    </dependency>

    <dependency>
      <groupId>dk.alexandra.fresco</groupId>
      <artifactId>core</artifactId>
      <version>1.1.3-SNAPSHOT</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>dk.alexandra.fresco</groupId>
      <artifactId>spdz</artifactId>
      <version>1.1.3-SNAPSHOT</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>dk.alexandra.fresco</groupId>
      <artifactId>spdz</artifactId>
      <version>1.1.3-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>dk.alexandra.fresco</groupId>
      <artifactId>spdz2k</artifactId>
      <version>1.1.3-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>dk.alexandra.fresco</groupId>
      <artifactId>spdz2k</artifactId>
      <version>1.1.3-SNAPSHOT</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.6.1</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.0.2</version>
        <configuration>
          <encoding>UTF-8</encoding>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
